<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">旅游指南</string>
    <string name="action_settings">Settings</string>
    <string name="empty" />
    <string name="setting">设　置</string>
    <string name="yixin">易　信</string>
    <string name="friend">朋友圈</string>
    <string name="start">马上体验</string>
    <string name="map">朋友地图</string>
    <string name="app">更多应用</string>
    <string name="jinpingyou">精品游</string>
    <string name="tehuiyou">特惠游</string>
    <string name="gerenyou">个人游</string>
    <string name="tuanyou">团游</string>
    <string name="message_center">消息中心</string>
    <string name="order">我的订单</string>
    <string name="comment">我的点评</string>
    <string name="collect">我的收藏</string>
    <string name="back">返回</string>
    <string name="opinion">意见反馈</string>
    <string name="praise">给个好评</string>
    <string name="about">关于旅游指南</string>
    <string name="caleanCache">清除缓存</string>
    <string name="update">检测更新</string>
    <string name="gonglue">景点攻略</string>
    <string name="tuijain">景点推荐</string>
    <string name="ticket">景点门票</string>
    <string name="route">出行路线</string>
    <string name="food">美食餐饮</string>
    <string name="hotel">酒店宾馆</string>
    <string name="shopping">购物指南</string>
    <string name="weather">当地天气</string>
    <string name="seckill">特价秒杀</string>
    <string name="recommen">精品推荐</string>
    <string name="home">首页</string>
    <string name="zhengzhou">郑州</string>
    <string name="search_hint">目的地 区域 美食</string>
    <string name="login_hint">点击登录</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="psw">密码</string>
    <string name="register">注册</string>
    <string name="loss_psw">忘记密码</string>
    <string name="third_account">第三方账号登陆</string>
    <string name="login_error">账号或者密码错误</string>
    <string name="logout">退出</string>
    <string name="near_foods">附近美食</string>
    <string name="recommen_foods">精品推荐</string>
    <string name="hand_search">手动搜索</string>
    <string name="hot_strategy">热门攻略</string>
    <string name="recommen_strategy">精品攻略</string>
    <string name="strategy_search">攻略搜索</string>
    <string name="test_strategy_title">国庆7七日游</string>
    <string name="test_strategy_author">逍遥游一生</string>
    <string name="wait_none">页面正在努力开发中....</string>
    <!-- xListview -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>