<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white" >
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="#f6f6f6"
    	android:padding="10dip">
		<LinearLayout 
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        android:layout_width="0dip"
	    	android:layout_weight="1"
	    	android:gravity="center">
        	<ImageView
        	    android:id="@+id/strategy_img"
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:clickable="true"
    			android:src="@drawable/category_gonglue"/>
        	<TextView 
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/gonglue"
    			android:layout_marginTop="5dip"
    			android:textColor="@color/text_black_normal"/>
		</LinearLayout>
		<LinearLayout 
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        android:layout_width="0dip"
	    	android:layout_weight="1"
	    	android:gravity="center" >
        	<ImageView
        	    android:clickable="true"
        	    android:id="@+id/recommender_img"
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/category_recom"/>
        	<TextView 
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/tuijain"
    			android:layout_marginTop="5dip"
        	    android:textColor="@color/text_black_normal"/>
		</LinearLayout>
		<LinearLayout 
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        android:layout_width="0dip"
	    	android:layout_weight="1"
	    	android:gravity="center"  >
        	<ImageView
        	    android:clickable="true"
        	    android:id="@+id/ticket_img"
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:background="@drawable/category_ticket"
    			/>
        	<TextView 
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/ticket"
    			android:layout_marginTop="5dip"
        	    android:textColor="@color/text_black_normal"/>
		</LinearLayout>
		<LinearLayout 
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        android:layout_width="0dip"
	    	android:layout_weight="1"
	    	android:gravity="center"
	        >
        	<ImageView
        	    android:clickable="true"
        	    android:id="@+id/route_img"
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/category_route"/>
        	<TextView 
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/route"
    			android:layout_marginTop="5dip"
        	    android:textColor="@color/text_black_normal"/>
		</LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:padding="10dip"
    	android:background="#f6f6f6">
		<LinearLayout 
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        android:layout_width="0dip"
	    	android:layout_weight="1"
	    	android:gravity="center">
        	<ImageView
        	    android:clickable="true"
        	    android:id="@+id/catering_img"
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/category_food"/>
        	<TextView 
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/food"
    			android:layout_marginTop="5dip"
        	   	android:textColor="@color/text_black_normal" />
		</LinearLayout>
		<LinearLayout 
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        android:layout_width="0dip"
	    	android:layout_weight="1"
	    	android:gravity="center">
        	<ImageView
        	    android:clickable="true"
        	    android:id="@+id/hotel_img"
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/category_hotel" />
        	<TextView 
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/hotel"
    			android:layout_marginTop="5dip"
        	    android:textColor="@color/text_black_normal"/>
		</LinearLayout>
		<LinearLayout 
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        android:layout_width="0dip"
	    	android:layout_weight="1"
	    	android:gravity="center" >
        	<ImageView
        	    android:clickable="true"
        	    android:id="@+id/shopping_img"
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/category_shopping"/>
        	<TextView 
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/shopping"
    			android:layout_marginTop="5dip"
        	    android:textColor="@color/text_black_normal"/>
		</LinearLayout>
		<LinearLayout 
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        android:layout_width="0dip"
	    	android:layout_weight="1"
	    	android:gravity="center" >
        	<ImageView
        	    android:clickable="true"
        	    android:id="@+id/weather_img"
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/category_weather"/>
        	<TextView 
        	    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/weather"
    			android:layout_marginTop="5dip"
        	    android:textColor="@color/text_black_normal"/>
		</LinearLayout>
    </LinearLayout>
    
    
   	<LinearLayout 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
    	 >
		<ImageView 
	      	android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:src="@drawable/icon_seckill"/>
	    <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/seckill"
	    	android:textColor="#7f000000"
	    	android:textSize="17sp"
	    	android:textStyle="bold"
	    	android:gravity="center_vertical"
	        />
    </LinearLayout>
<!--     
    <FrameLayout 
        android:layout_height="150dip"
        android:layout_width="fill_parent"
        android:padding="10dip"
        
        >
        <ImageView 
            android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:src="@drawable/j_1"
	   		android:scaleType="fitXY"
            />
        <TextView 
            android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:text="整点秒杀"
	   		android:layout_gravity="bottom|center_horizontal"
	   		android:textSize="16sp"
	   		android:textColor="@color/white"
            />
    </FrameLayout>
    <FrameLayout 
        android:layout_height="150dip"
        android:layout_width="fill_parent"
        android:padding="10dip"
        
        >
        <ImageView 
            android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:src="@drawable/j_2"
	   		android:scaleType="fitXY"
            />
        <TextView 
            android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:text="整点秒杀"
	   		android:layout_gravity="bottom|center_horizontal"
	   		android:textSize="16sp"
	   		android:textColor="@color/white"
            />
    </FrameLayout>
    <LinearLayout 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
    	 >
		<ImageView 
	      	android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:src="@drawable/biaotou"/>
	    <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/recommen"
	    	android:layout_marginTop="5dip"
	    	android:layout_marginLeft="-17dip"
	    	android:textColor="#7f000000"
	    	android:textSize="17sp"
	    	android:textStyle="bold"
	        />
    </LinearLayout>
    <FrameLayout 
        android:layout_height="150dip"
        android:layout_width="fill_parent"
        android:padding="10dip"
        
        >
        <ImageView 
            android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:src="@drawable/j_3"
	   		android:scaleType="fitXY"
            />
        <TextView 
            android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:text="精品推荐"
	   		android:layout_gravity="bottom|center_horizontal"
	   		android:textSize="16sp"
	   		android:textColor="@color/white"
            />
    </FrameLayout>
    <FrameLayout 
        android:layout_height="150dip"
        android:layout_width="fill_parent"
        android:padding="10dip"
        
        >
        <ImageView 
            android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:src="@drawable/j_4"
	   		android:scaleType="fitXY"
            />
        <TextView 
            android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:text="精品推荐"
	   		android:layout_gravity="bottom|center_horizontal"
	   		android:textSize="16sp"
	   		android:textColor="@color/white"
            />
    </FrameLayout> -->
</LinearLayout>