<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/root"
	android:background="@drawable/bg_shadow"
	android:orientation="vertical" >

    <include
        android:id="@+id/login_backBtnLayout"
        layout="@layout/toolbox_item_login_back" 
        android:background="@color/gray"/>
    
	<FrameLayout 
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dip"
	    >
        <itstudio.travel.widget.RoundedImageView
            android:id="@+id/headImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxHeight="82dip"
            android:maxWidth="82dip"
            android:src="@drawable/head_default_local" />
	     <itstudio.travel.widget.ProgressWheel
	        android:layout_gravity="center"
	        android:id="@+id/progressBarFour"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        ProgressWheel:text=""
	        ProgressWheel:textColor="#339BB9"
	        ProgressWheel:textSize="14sp"
	        ProgressWheel:barLength="30dp" 
	        ProgressWheel:rimColor="#44000000"
	        ProgressWheel:barColor="#99d64b"
	        ProgressWheel:barWidth="3dp" 
	        ProgressWheel:rimWidth="3dp" 
	        ProgressWheel:spinSpeed="3dp"
	        ProgressWheel:delayMillis="0"/>
	</FrameLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="22dip"
        android:id="@+id/linear"
        android:visibility="invisible"
        android:orientation="vertical" >
        <FrameLayout
           	android:layout_marginTop="10dip"
        	android:layout_width="match_parent"
        	android:layout_height="40dip"
        	android:paddingLeft="20dip"
        	android:paddingRight="20dip"
        	android:orientation="horizontal" >

	        <EditText 
	             android:paddingLeft="25dip"
	            android:id="@+id/user_name"
	           	android:layout_height="40dip"
			    android:layout_width="match_parent"
			    android:hint="@string/account" 
			    android:gravity="center_vertical"
	            android:background="@drawable/edit_text_bg"
	            android:singleLine="true"
	            />
	        <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/icon_account"
		        android:layout_gravity="center_vertical"			    
			    />
	    </FrameLayout>
        <FrameLayout
           	android:layout_marginTop="10dip"
        	android:layout_width="match_parent"
        	android:layout_height="40dip"
        	android:paddingLeft="20dip"
        	android:paddingRight="20dip"
        	android:orientation="horizontal" >
	        <EditText 
	            android:paddingLeft="25dip"
	            android:id="@+id/user_psw"
	           	android:layout_height="40dip"
			    android:layout_width="match_parent"
			    android:hint="@string/psw" 
			    android:gravity="center_vertical"
	            android:background="@drawable/edit_text_bg"
	            android:singleLine="true"
	            android:password="true"
	            />
			<ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/icon_psw"			    
			    android:layout_gravity="center_vertical"
			    />
	    </FrameLayout>
        <Button 
            android:layout_marginRight="20dip"
	        android:layout_marginLeft="20dip"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
           	android:layout_height="40dip"
           	android:gravity="center"
           	android:text="@string/login"
           	android:textColor="#ffffff"
           	android:textSize="20sp"
           	android:id="@+id/login_btn"
            android:background="@drawable/login_btn"
            />
        <RelativeLayout 
            android:layout_marginRight="20dip"
	        android:layout_marginLeft="20dip"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
           	android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="15sp"
                android:textColor="#3b3b3b"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/loss_psw"
                android:textSize="15sp"
                android:textColor="#3b3b3b"
                />
            
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginRight="20dip"
	        android:layout_marginLeft="20dip"
            android:layout_marginTop="10dip"
            android:background="@color/toolbox_line" />   
		<LinearLayout
	        android:layout_marginRight="20dip"
	        android:layout_marginLeft="20dip"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
           	android:layout_height="wrap_content"
           	android:gravity="center_vertical"
	        android:orientation="horizontal" > 
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_account"
                android:textSize="15sp"
                android:textColor="#3b3b3b"
                />	        
		    <ImageView 
		        android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_douban"
                android:layout_marginLeft="10dip"
		        />
		    <ImageView 
		        android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_qq"
                android:layout_marginLeft="10dip"
		        />
	        </LinearLayout>           
        
	</LinearLayout>
</LinearLayout>